--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,24 @@
 </head>
 <body>
 	<h1>Acceso denegado</h1>
+	<script src="socket.io/socket.io.js"></script>
+	<script>
+		var socket = io();
+
+		socket.on('connect', function () {
+			console.log('Conectado al servidor');		
+		});
+
+		socket.on('disconnect', function () {
+			console.log('Perdimos comunicacion con el servidor');		
+		});
+
+		socket.emit('mensaje', {nombre: 'Max'} )
+
+		socket.on('mensaje', function ( payload ) {
+			console.log('Escuchando:', payload );		
+		});
+		
+	</script>
 </body>
 </html>
